--- a/finebe.app/index.html
+++ b/finebe.app/index.html
@@ -1,10 +1,18 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" class="sl-theme-dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/finebe.app/public/finebe-icon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>finebe</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="/finebe.app/public/finebe-icon.png"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/themes/dark.css"
+    />
   </head>
   <body>
     <div id="root"></div>
