--- a/finebe.app/index.html
+++ b/finebe.app/index.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8" />
     <title>finebe</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="icon"
-      type="image/png"
-      href="/finebe.app/public/finebe-icon.png"
-    />
+    <link rel="icon" type="image/png" href="/favicon.ico">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/themes/dark.css"
